# creator

./: .gitignore  Cargo.toml  Makefile  WISHLIST.md  bacon.toml  index.html
.github/workflows/: codeql.yml
app/: creator.d.ts  creator.js  creator_bg.wasm  creator_bg.wasm.d.ts  index.html  main.js  package.json  style.css
docs/: creator.js  creator_bg.wasm  index.html  main.js  style.css
docs/web/: main.js
src/: camera.rs  command.rs  command_queue.rs  cube.rs  drawable.rs  example-shader-water.txt  graphics.rs  grid.rs  lib.rs  model.rs  mouse.rs  ocnode.rs  octree.rs  scene.rs  storage.rs  stored_octree.rs
web/: creator.d.ts  creator.js  creator_bg.wasm  creator_bg.wasm.d.ts  index.html  main.js  style.css
