[package]
name = "creator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nalgebra-glm = "0.19.0" 
wasm-bindgen = "0.2.86"
js-sys = "0.3"
log = "0.4.6"
wasm-logger = "0.2.0"
[dependencies.web-sys]
version = "0.3"
features = [
  'Document', 
  'Window', 
  'HtmlCanvasElement' ,
  'WebGlRenderingContext', 
  'WebGl2RenderingContext', 
  'WebGlProgram', 
  'WebGlShader', 
  'WebGlBuffer', 
  'WebGlUniformLocation'
]
