[package]
name = "creator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo = "0.11.0"
nalgebra-glm = "0.19.0"
nalgebra = "0.33.2"
wasm-bindgen = "0.2.99"
js-sys = "0.3.76"
log = "0.4.6"
wasm-logger = "0.2.0"
serde_json = "1.0.134"
wasm-bindgen-futures = "0.4.50"
[dependencies.indexed_db_futures]
version = "0.6.0"
features = ['cursors', 'indices', 'serde']
[dependencies.web-sys]
version = "0.3.74"
features = [
    'Document',
    'Window',
    'HtmlCanvasElement',
    'WebGlRenderingContext',
    'WebGl2RenderingContext',
    'WebGlFramebuffer',
    'WebGlRenderbuffer',
    'WebGlTexture',
    'WebGlProgram',
    'WebGlShader',
    'WebGlBuffer',
    'WebGlUniformLocation',
    'MouseEvent',
    'KeyboardEvent',
    'Storage',
    'WheelEvent',
    'IdbFactory',
    'IdbOpenDbRequest',
    'IdbDatabase',
    'IdbTransactionMode',
    'IdbTransaction',
    'IdbObjectStore',
    'IdbIndex',
    'DomStringList',
]
[dependencies.serde]
version = "1.0.217"
features = ["derive"]
